--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "blog",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2"
+    "@rails/webpacker": "^4.0.2",
+    "actiontext": "https://github.com/kobaltz/actiontext"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
